--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "gatsby": "^2.3.5",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.6",
+    "netlify-cms": "^2.9.7",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
