--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,3 +18,18 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+  - name: "pages"
+    label: "Pages"
+    files:
+      - label: "About"
+        name: "about"
+        file: "content/pages/about.md"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Description, name: description, widget: string}
+      - label: "Home"
+        name: "home"
+        file: "content/pages/home.md"
+        fields:
+          - {label: Subtitle, name: subtitle, widget: string}
+          - {label: Description, name: description, widget: string}
