--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,9 +27,11 @@ collections:
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Description, name: description, widget: string}
+          - {label: About Page Content, name: content, widget: markdown}
       - label: "Home"
         name: "home"
         file: "content/pages/home.md"
         fields:
           - {label: Subtitle, name: subtitle, widget: string}
           - {label: Description, name: description, widget: string}
+          - {label: Home Page Content, name: content, widget: markdown}
