--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,7 +28,7 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: Description, name: description, widget: string}
           - {label: "Body", name: "body", widget: "markdown"}
-          - {label: TestField, name: "test-field", widget: string}
+          - {label: TestField, name: "testfield", widget: string}
       - label: "Home"
         name: "home"
         file: "content/pages/home.md"
