--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,6 +29,7 @@ collections:
           - {label: Description, name: description, widget: string}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: TestField, name: "testfield", widget: string}
+          - {label: TestList, name: "testlist", widget: list, field: {label: thing, name: thing, widget: string}}
       - label: "Home"
         name: "home"
         file: "content/pages/home.md"
