--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "gatsby": "^2.13.44",
+    "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-source-filesystem": "^2.1.7",
     "gatsby-transformer-remark": "^2.6.10",
