--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-transformer-remark": "^2.6.10",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
